<resources>
    <string name="app_name">BondoMan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit">Simpan</string>
    <string name="bar_transaksi">Transaksi</string>
    <string name="default_location">-6.892610753197782, 107.61042237491533</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="graph">Grafik</string>
    <string name="add_button">Add Button</string>
    <string name="transaksi">Transaksi</string>
    <string name="upload_from_galery">upload from galery</string>
    <string name="capture_picture">capture picture</string>
    <string name="simpan_daftar_transaksi">Simpan Daftar Transaksi</string>
    <string name="kirim_list_melalui_email">Kirim List Melalui Email</string>
    <string name="logout">logout</string>
    <string name="setting">Pengaturan</string>
    <string name="twibbon">Twibbon</string>
    <string name="coba_lagi">coba lagi</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="nominal">Nominal</string>
    <string name="price">Price</string>
    <string name="lokasi">Lokasi</string>
    <string name="location">Location</string>
    <string name="tanggal">Tanggal</string>
    <string name="update_transaksi">Update Transaksi</string>
    <string name="judul_transaksi">Judul Transaksi</string>
    <string name="name">Name</string>
    <string name="kategori">Kategori</string>
    <string name="scanner">Scanner</string>
    <string name="randomize_transaction">Randomize Transaction</string>
</resources>