<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layout_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title_add_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_transaksi"
                android:textStyle="bold"
                android:textColor="@color/outer_space"
                android:textSize="24sp"
                android:gravity="center"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"/>

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_transaksi"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_name"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:inputType="text"/>

            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp" />

            <EditText
                android:id="@+id/edit_text_category"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/category"
                android:inputType="text"
                android:enabled="false"
                android:autofillHints="" />

            <TextView
                android:id="@+id/label_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_price"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lokasi"
                    android:textSize="18sp"
                    android:textColor="@color/outer_space"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/button_update_location"
                    android:layout_width="44dp"
                    android:layout_height="35dp"
                    android:background="@null"
                    android:drawableStart="@drawable/baseline_add_location_24"
                    android:drawablePadding="8dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_location"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/location"
                android:inputType="text"
                android:autofillHints="" />

            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_date"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/tanggal"
                android:inputType="date"
                android:enabled="false"
                android:autofillHints="" />

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/outer_space"
                    android:maxLines="1"
                    android:text="@string/update"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/red_delete"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/button_save"
                    app:layout_constraintTop_toTopOf="@+id/button_save"
                    android:layout_marginStart="30dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
