<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layout_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title_add_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Transaksi Baru"
                android:textStyle="bold"
                android:textColor="@color/outer_space"
                android:textSize="24sp"
                android:gravity="center"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"/>

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_transaksi"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_name"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:inputType="text"/>

            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kategori"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"/>

            <RadioGroup
                android:id="@+id/radio_group_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_income"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/pemasukan"
                    android:textSize="16sp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:textSize="16sp"
                    android:text="@string/pengeluaran" />
            </RadioGroup>

            <TextView
                android:id="@+id/label_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_price"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lokasi"
                android:textSize="18sp"
                android:textColor="@color/outer_space"
                android:paddingTop="20sp"
                android:paddingBottom="5sp"/>

            <EditText
                android:id="@+id/edit_text_location"
                android:background="@drawable/rounded_corner_view"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/location"
                android:inputType="text" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/outer_space"
                android:textColor="@color/white"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>