<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment">

    <Button
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_download_24"
        android:drawablePadding="10dp"
        android:text="@string/simpan_daftar_transaksi"
        android:layout_marginTop="50dp"
        android:drawableTint="@color/white"
        android:background="@color/outer_space"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_attach_email_24"
        android:drawablePadding="10dp"
        android:text="@string/kirim_list_melalui_email"
        android:layout_marginTop="20dp"
        android:drawableTint="@color/white"
        android:background="@color/outer_space"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_button" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_broadcast_on_personal_24"
        android:drawablePadding="10dp"
        android:text="@string/randomize_transaction"
        android:drawableTint="@color/white"
        android:background="@color/outer_space"
        android:padding="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_button" />

    <Button
        android:id="@+id/twibbon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twibbon"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/baseline_photo_filter_24"
        android:layout_marginTop="20dp"
        android:drawableTint="@color/white"
        android:background="@color/outer_space"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_button"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/logout_icon"
        android:text="@string/logout"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twibbon"/>


</androidx.constraintlayout.widget.ConstraintLayout>